--- a/client/public/index.html
+++ b/client/public/index.html
@@ -39,5 +39,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Add this to your index.html if not using npm Bootstrap JavaScript -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-oBqDVmMz4fnFO9OhWhF5z6n2NixK4fifDSSGkQkA2lJWZ5Kz9n7t1ck4o2jbln3"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
